<resources>
    <string name="app_name">youphoto</string>
    <string name="button_enter">enter</string>
    <string name="activity_main_title">UPhoto</string>
    <string name="activity_toast_quit">Please press again for quition.</string>
    <string name="activity_main_btn_selpic">Select From Photos</string>
    <string name="activity_main_btn_takephoto">Take A Photo</string>
    <string name="fail_get_image">failed to get image</string>
    <string name="button_quit">Quit</string>
    <string name="button_save">Save</string>
    <string name="button_pic_edit">Edit</string>
    <string name="button_pic_share">SHARE</string>
    <string name="button_edit_romote">Romote</string>
    <string name="button_edit_flag">Flag</string>
    <string name="button_edit_filter">Filter</string>
    <string name="button_edit_power">Power</string>
    <string name="button_edit_graffitir">Graffiti</string>
    <string name="dialog_info_title">Infomation</string>
    <string name="dialog_info_quit_msg">Do you want to quit editing picture?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pic_share_error">The picture was not found.</string>
    <string name="pic_save_error">The picture saved fail.</string>
    <string name="button_filter_gray">Gray</string>
    <string name="button_filter_reversal">Reversal</string>
    <string name="button_filter_nostalgia">Nostalgia</string>
    <string name="button_filter_uncolor">Uncolor</string>
    <string name="button_filter_high_saturation">High saturation</string>
    <string name="button_filter_relief">Relief</string>
    <string name="seekbar_color">Color</string>
    <string name="seekbar_saturation">Saturation</string>
    <string name="seekbar_light">Light</string>
    <string name="button_filter_old">Old</string>
    <string name="pic_save_no_update">Picture was not updated.</string>
    <string name="seekbar_pait_size">Size</string>
    <string name="activity_main_option_my_works">MyWorks</string>
    <string name="activity_pictures_title">MyWorks</string>
    <string name="activity_pictures_option_layout">Layout</string>
    <string name="card_picture_file_name">FileName</string>
    <string name="card_picture_file_size">FileSize</string>
    <string name="activity_pictures_list_empty">There are No Works</string>
    <string name="activity_pictures_list_empty_hint">Edit a picture at once.</string>
    <string name="activity_pictures_context_remove">Remove</string>
    <string name="activity_pictures_selected">was selected</string>
    <string name="activity_pictures_remove_error">Remove Error.</string>
    <string name="editpic_toast_no_undo">Aready undo.</string>
    <string name="editpic_toast_no_redo">Aready redo.</string>
    <string name="dialog_layout_hint_text">Do you want to save the layout you select?</string>
    <string name="dialog_layout_hint_checkbox">No hint.</string>
    <string name="dialog_layout_hint_title">IsSave</string>
</resources>
