<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/background_dark"
    tools:context=".activity.MainActivity">

    <!--应用栏-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp">

                <Button
                    android:id="@+id/btn_quit"
                    android:text="@string/button_quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <Button
                    android:id="@+id/btn_save"
                    android:text="@string/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!-- 主界面 -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/img_editing_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_edit_actions"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="gone">

            <Button
                android:drawableTop="@drawable/ic_rotate_left_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_edit_romote"
                android:text="@string/button_edit_romote"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />

            <Button
                android:drawableTop="@drawable/ic_panorama_horizontal_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_edit_flag"
                android:text="@string/button_edit_flag"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />

            <Button
                android:drawableTop="@drawable/ic_wb_incandescent_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_edit_filter"
                android:text="@string/button_edit_filter"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />
            <Button
                android:drawableTop="@drawable/ic_tune_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_edit_power"
                android:text="@string/button_edit_power"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />
            <Button
                android:drawableTop="@drawable/ic_brush_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_edit_graffiti"
                android:text="@string/button_edit_graffitir"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_options"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:drawableTop="@drawable/ic_create_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_pic_edit"
                android:text="@string/button_pic_edit"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />

            <Button
                android:drawableTop="@drawable/ic_share_24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_pic_share"
                android:text="@string/button_pic_share"
                android:textColor="@android:color/white"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />
        </LinearLayout>



    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
